--- a/backend/package.json
+++ b/backend/package.json
@@ -16,11 +16,12 @@
   "author": "Diego Beristain de la Mora",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mongoose": "^8.0.0"
+    "bcrypt": "5.1.1",
+    "dotenv": "16.3.1",
+    "express": "4.18.2",
+    "mongoose": "8.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "3.0.1"
   }
 }
